# Home-control-and-monitoring-system

./: README.md
01_05/ESP32_CONTROL/: ESP32_CONTROL.ino
01_05/ESP32_FARM/: ESP32_FARM.ino
01_05/freeRTOSWT/: freeRTOSWT.ino
01_05/wt/: wt.ino
02_05/: Note.txt
02_05/ESP32_CONTROL/: ESP32_CONTROL.ino
02_05/ESP32_FARM/: ESP32_FARM.ino
02_05/ESP32_SENSOR/: ESP32_SENSOR.ino
08_06/: 06_02.txt  note21-05.txt
08_06/MultiPath_stream/: MultiPath_stream.ino
08_06/MultiPath_streamTEST/: MultiPath_streamTEST.ino
13_05/: note13-5.txt  note17-5.txt
13_05/ESP32_CAM/: TESTCAM.ino
13_05/ESP32_CONTROL/: ESP32_CONTROL.ino
13_05/ESP32_FARM/: ESP32_FARM.ino
13_05/ESP32_SENSOR/: ESP32_SENSOR.ino
13_05/TESTmp3/: TESTmp3.ino
15_04_TEST1/: Note.txt
15_04_TEST1/ESP32_CENTER/: ESP32_CENTER.ino
17_05/: KLTN.rar  note17-5.txt
17_05/ESP32_CONTROL/: ESP32_CONTROL.ino
17_05/ESP32_CONTROLEXCEL/: ESP32_CONTROLEXCEL.ino
18_05/AHT2x_ENS160/: AHT2x_ENS160.ino
18_05/ESP32_CONTROL/: ESP32_CONTROL.ino
18_05/ESP32_FARM/: ESP32_FARM.ino
18_05/ESP32_SENSOR/: ESP32_SENSOR.ino
18_05/TESTmp3/: TESTmp3.ino
23_04/ESP32_CONTROL/: ESP32_CONTROL.ino
23_04/ESP32_FARM/: ESP32_FARM.ino
23_04/SHT30/: SHT30.ino
27_05/: note18-5.txt
27_05/ESP32_CENTER/libraries/ui/src/: CMakeLists.txt  ui.h  ui_helpers.c
27_05/ESP32_CENTER/libraries/ui/src/images/: ui_img_ktroombg_png.c  ui_img_lroombg_png.c  ui_img_weather_png.c  ui_img_weather_sun_png.c
27_05/ESP32_CENTER/libraries/ui/src/screens/: ui_FarmScreen.cpp  ui_HomeScreen.c  ui_LivingRoomScreen.cpp
31_05/: 06_02.txt
(+129 files in other folders)
