SET(SOURCES screens/ui_HomeScreen.c
    screens/ui_LoginScreen.c
    screens/ui_MenuScreen.c
    screens/ui_SettingUserScreen.c
    screens/ui_SettingTimeScreen.c
    screens/ui_LivingRoomScreen.c
    screens/ui_KitchenRoomScreen.c
    screens/ui_FarmScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_bgiot4_png.c
    images/ui_img_sun_png.c
    images/ui_img_clouds_png.c
    images/ui_img_house_png.c
    images/ui_img_weather_png.c
    images/ui_img_weather_cloud_png.c
    images/ui_img_weather_cloud_fog_png.c
    images/ui_img_weather_sun_png.c
    images/ui_img_bg2_png.c
    images/ui_img_btn2_png.c
    images/ui_img_iconexit1_png.c
    images/ui_img_icon_settings_png.c
    images/ui_img_iconhome_png.c
    images/ui_img_iconclock1_png.c
    images/ui_img_roller_bg_png.c
    images/ui_img_lroombg_png.c
    images/ui_img_img_switch_bg_png.c
    images/ui_img_ktroombg_png.c
    images/ui_img_farmbg_png.c
    images/ui_img_bg3_png.c
    images/ui_img_bggg2_png.c
    images/ui_img_iconalarm1_png.c
    fonts/ui_font_Font1Date.c
    fonts/ui_font_Font2.c
    fonts/ui_font_Font3.c
    fonts/ui_font_FontDay.c
    fonts/ui_font_H1.c
    fonts/ui_font_Subtitle.c)

add_library(ui ${SOURCES})
